# accelerated_image_processor

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  evaluate_compression.py  package.xml  pyproject.toml  zensical.toml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml
accelerated_image_processor/src/accelerator/: jpeg_compressor.cpp
configs/: av1_ssim-false_bpp_005.param.yaml  av1_ssim-false_bpp_01.param.yaml  av1_ssim-false_bpp_02.param.yaml  av1_ssim-false_bpp_03.param.yaml  av1_ssim-false_bpp_06.param.yaml  av1_ssim-true_bpp_005.param.yaml  av1_ssim-true_bpp_01.param.yaml  av1_ssim-true_bpp_02.param.yaml  av1_ssim-true_bpp_03.param.yaml  av1_ssim-true_bpp_06.param.yaml  h264_prof-BASELINE_bpp-03.param.yaml  h264_prof-BASELINE_bpp-06.param.yaml  h264_prof-HIGH_bpp-03.param.yaml  h264_prof-HIGH_bpp-06.param.yaml  h265_prof-MAIN_bpp-03.param.yaml  h265_prof-MAIN_bpp-06.param.yaml  jpeg_baseline.param.yaml
docs/: common.md  compression.md  index.md  pipeline.md
include/accelerator/: color_space.hpp  jpeg_compressor.hpp  rectifier.hpp
include/gpu_imgproc/: gpu_imgproc.hpp  task_queue.hpp
src/: gpu_imgproc.cpp
src/accelerated_image_processor/: CMakeLists.txt  package.xml
src/accelerated_image_processor/include/accelerator/: jpeg_compressor.hpp  rectifier.hpp
src/accelerated_image_processor/src/accelerator/: jpeg_compressor.cpp  rectifier.cpp
src/accelerated_image_processor_benchmark/: CMakeLists.txt  README.md  package.xml
src/accelerated_image_processor_benchmark/include/accelerated_image_processor_benchmark/: benchmarker.hpp  compression.hpp  image.hpp  rosbag.hpp  utility.hpp
src/accelerated_image_processor_benchmark/src/: benchmarker.cpp  compression.cpp  compression_encode_bench.cpp  conversion.hpp  image.cpp  image.hpp  observer.hpp  run.cpp  utility.cpp
src/accelerated_image_processor_common/: CMakeLists.txt  package.xml
src/accelerated_image_processor_common/include/accelerated_image_processor_common/: datatype.hpp  helper.hpp  parameter.hpp  processor.hpp
src/accelerated_image_processor_compression/: CMakeLists.txt  README.md  package.xml
src/accelerated_image_processor_compression/cmake/: FindLibJpegTurbo.cmake  FindNVJPEG.cmake  FindNVMMAPI.cmake  LibFindMacros.cmake
src/accelerated_image_processor_compression/include/accelerated_image_processor_compression/: builder.hpp  compressor.hpp  jpeg.hpp  jpeg_compressor.hpp  video_compressor.hpp
src/accelerated_image_processor_compression/src/: builder.cpp  jpeg.cpp
src/accelerated_image_processor_compression/src/jpeg_compressor/: cpu.cpp  jetson.cpp  nvjpeg.cpp
src/accelerated_image_processor_compression/src/video_compressor/: jetson.cpp  jetson.hpp  jetson_av1.cpp  jetson_error_helper.hpp  jetson_h264.cpp  jetson_h265.cpp  jetson_precise_timestamp_map.hpp
src/accelerated_image_processor_compression/test/: builder.cpp  cpu_jpeg_compressor.cpp  jetson_jpeg_compressor.cpp  jetson_video_compressor_av1.cpp  jetson_video_compressor_h264.cpp  jetson_video_compressor_h265.cpp  nv_jpeg_compressor.cpp  nvjpeg_jpeg_compressor.cpp  test_utility.hpp
src/accelerated_image_processor_decompression/: CMakeLists.txt  README.md  package.xml
src/accelerated_image_processor_decompression/include/accelerated_image_processor_decompression/: builder.hpp  video_decompressor.hpp
src/accelerated_image_processor_decompression/src/: builder.cpp
src/accelerated_image_processor_decompression/src/video_decompressor/: ffmpeg.cpp
src/accelerated_image_processor_decompression/test/: builder.cpp  ffmpeg_video_decompressor.cpp  test_utility.hpp
src/accelerated_image_processor_pipeline/: CMakeLists.txt  README.md  package.xml
src/accelerated_image_processor_pipeline/examples/: example_sequential.cpp
src/accelerated_image_processor_pipeline/include/accelerated_image_processor_pipeline/: builder.hpp  rectifier.hpp  sequential.hpp
src/accelerated_image_processor_pipeline/src/: builder.cpp  rectifier.cpp  sequential.cpp
src/accelerated_image_processor_pipeline/src/rectifier/: cpu.cpp  npp.cpp  opencv_cuda.cpp  utility.cpp  utility.hpp
src/accelerated_image_processor_pipeline/test/: builder.cpp  cpu_rectifier.cpp  npp_rectifier.cpp  opencv_cuda_rectifier.cpp  sequential.cpp  test_utility.hpp
src/accelerated_image_processor_python/: CMakeLists.txt  README.md  package.xml
src/accelerated_image_processor_python/accelerated_image_processor/common/: __init__.py
src/accelerated_image_processor_python/accelerated_image_processor/compression/: __init__.py
src/accelerated_image_processor_python/accelerated_image_processor/datatype/: __init__.py
src/accelerated_image_processor_python/accelerated_image_processor/decompression/: __init__.py
src/accelerated_image_processor_python/cmake/: Findaccelerated_image_processor_common.cmake  Findaccelerated_image_processor_compression.cmake  Findaccelerated_image_processor_decompression.cmake  Findaccelerated_image_processor_helpers.cmake
src/accelerated_image_processor_python/src/: binding.hpp  common.cpp  compression.cpp  datatype.cpp  decompression.cpp
src/accelerated_image_processor_python/test/: test_common.py  test_compression.py  test_datatype.py  test_decompression.py
src/accelerated_image_processor_ros/: CMakeLists.txt  README.md  package.xml
src/accelerated_image_processor_ros/config/: decompress.param.yaml  imgproc.param.yaml
src/accelerated_image_processor_ros/include/accelerated_image_processor_ros/: conversion.hpp  parameter.hpp  qos.hpp  task_queue.hpp
src/accelerated_image_processor_ros/launch/: decompress.launch.xml  imgproc.launch.xml
src/accelerated_image_processor_ros/schema/: imgproc.schema.json
src/accelerated_image_processor_ros/src/: conversion.cpp  decompress_node.cpp  decompress_node.hpp  imgproc_node.cpp  imgproc_node.hpp  parameter.cpp  qos.cpp
src/accelerated_image_processor_ros/test/: conversion.cpp  parameter.cpp  qos.cpp
src/accelerator/: color_space.cu  jpeg_compressor.cpp  rectifier.cpp
