<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>accelerated_image_processor</name>
  <version>0.1.0</version>
  <description>Accelerated Image Processor</description>
  <maintainer email="contact@map4.jp">MAP IV</maintainer>

  <license>Apache 2</license>
  <author>Tier IV</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>libturbojpeg</depend>
  <depend>image_geometry</depend>
  <depend>cuda_blackboard</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
