<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>accelerated_image_processor_benchmark</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kotaro.uetake@tier4.jp">ktro2828</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Compression encode benchmark dependencies -->
  <depend>accelerated_image_processor_common</depend>
  <depend>accelerated_image_processor_compression</depend>
  <depend>accelerated_image_processor_pipeline</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
