<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>accelerated_image_processor_python</name>
  <version>0.0.0</version>
  <description>Python bindings for accelerated image processor library</description>
  <maintainer email="contact@tier4.jp">TIER IV</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>accelerated_image_processor_common</depend>
  <depend>accelerated_image_processor_compression</depend>
  <depend>libboost-python-dev</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
